assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset 'utf-8';



// Our variables
$base-font-family:    'Helvetica Neue', Helvetica, Arial, sans-serif;
$base-font-size:      16px;
$large-font-size:     18px;
$base-font-weight:    400;
$year-link-font-size: $base-font-size * 1.5;
$small-font-size:     $base-font-size * .875;
$phone-font-size:     $base-font-size * .75;
$base-line-height:    1.5;

$spacing-unit:     30px;

$text-color:       #111;
$link-color:       #20437c;
$background-color: #fdfdfd;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    800px;

$on-palm:          600px;
$on-laptop:        800px;



// Use media queries like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }
@mixin media-query($device) {
  @media screen and (max-width: $device) {
    @content;
  }
}

// Reset some basic elements
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
    margin: 0;
    padding: 0;
}



/**
 * Basic styling
 */
html, body {
    height: 100%;
}
body {
    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
    color: $text-color;
    background-color: $background-color;
    -webkit-text-size-adjust: 100%;
    -webkit-font-feature-settings: "kern" 1;
    -moz-font-feature-settings: "kern" 1;
    -o-font-feature-settings: "kern" 1;
    font-feature-settings: "kern" 1;
    font-kerning: normal;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    @include media-query($on-palm) {
        font-size: $phone-font-size;
    }
}



/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
    margin-bottom: $spacing-unit / 2;
}



/**
 * Images
 */
img {
    max-width: 100%;
    vertical-align: middle;
}

    
.rating_images {
    height: 1em;
}



/**
 * Figures
 */
figure > img {
    display: block;
}

figcaption {
    font-size: $small-font-size;
}



/**
 * Lists
 */
ul, ol {
    margin-left: $spacing-unit;
}

li {
    > ul,
    > ol {
         margin-bottom: 0;
    }
}



/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
    font-weight: $base-font-weight;
}



/**
 * Links
 */
a {
    color: $link-color;
    text-decoration: none;

    &:visited {
        color: $link-color;
    }

    &:hover {
        color: $link-color;
        text-decoration: underline;
    }

    .social-media-list a:hover {
        text-decoration: none;
    }

    .social-media-list a:hover .username {
      text-decoration: underline;
    }
}

.year-link {
  font-size: $year-link-font-size;
}



/**
 * Blockquotes
 */
blockquote {
    color: $grey-color;
    border-left: 4px solid $grey-color-light;
    padding-left: $spacing-unit / 2;
    font-size: $large-font-size;
    letter-spacing: -1px;
    font-style: italic;

    > :last-child {
        margin-bottom: 0;
    }
}



/**
 * Code formatting
 */
pre,
code {
    font-size: $base-font-size;
    border: 1px solid $grey-color-light;
    border-radius: 3px;
    background-color: #eef;
    @include media-query($on-palm) {
        font-size: $phone-font-size;
    }
}

code {
    padding: 1px 5px;
}

pre {
    padding: 8px 12px;
    overflow-x: auto;

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }
}



/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit;
    padding-left: $spacing-unit;
    @extend %clearfix;

    @include media-query($on-laptop) {
        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
        padding-right: $spacing-unit / 2;
        padding-left: $spacing-unit / 2;
    }
}



/**
 * Clearfix
 */
%clearfix {

    &:after {
        content: "";
        display: table;
        clear: both;
    }
}


/**
 * Tables
 */
table {
    margin-bottom: 30px;
    width: 100%;
    text-align: left;
    color: $grey-color;
    border-collapse: collapse;
    border: 1px solid #e8e8e8;
    tr {
        &:nth-child(even) {
            background-color: $grey-color;
        }
    }
    th {
        padding: 10px 15px;
        background-color: $background-color;
        border: 1px solid #dedede;
        border-bottom-color: $background-color;
    }
    td {
        padding: 10px 15px;
        border: 1px solid #e8e8e8;
    }
}


.site-header {
    border-bottom: 1px solid $grey-color-light;
    border-top: 5px solid $grey-color-dark;
    min-height: 125px;

    // Positioning context for the mobile navigation icon
    position: relative;
}

#rotating-header {
    display: block;
    @include media-query($on-palm) {
        display: none;
    }
}

#static-header {
    display: none;
    font-size: $base-font-size;
    @include media-query($on-palm) {
        display: block;
    }
}
/* ... */

